--- a/web_trial1/style.css
+++ b/web_trial1/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: mediumslateblue;
+    /* background-color: mediumslateblue; */
+    background-image: linear-gradient(pink, purple, white);
 }
 
 p{
@@ -12,16 +13,20 @@ p{
 h1{
     color: rgb(31, 49, 237);
     text-decoration:underline;
-    text-align: center;
-    background-color: rgb(240, 169, 225)
-    
+    text-align: center; 
+    background-color: rgb(240, 169, 225);
+    box-shadow: 1px 5px;
 }
 
 h2,h3{
     color:rgb(255, 0, 212);
+    font-family:Arial, sans-serif;
+    font-size: 20px;
     text-decoration:underline;
     text-align: center;
     background-color: rgb(240, 169, 225);
+    text-decoration:underline;
+    box-shadow: 1px 5px;
 }
 nav{
     background-color: rgb(245, 238, 243);
@@ -59,31 +64,34 @@ nav>a:hover{
 #info-section{
     color:blue;
     font-size:28px;
-    
 }
 
-.list ul{
+
+h4{
+    color:rgb(255, 0, 212);
     font-family:Arial, sans-serif;
-    font-size: 18px;
-    column-count: 5;
-    column-gap: 20px;
-    /* flex-wrap: wrap; */
-    column-rule-style:none;
-    margin: 0;
-    padding: 5px;
-    background-color: lightcyan;
-    block-size: auto;
+    font-size: 20px;
+    /* text-align: center; */
+    text-decoration:underline;
+    column-count: auto;
+    /* position: relative;
+    animation: mymove 5s ease-in;
+    animation-timing-function: linear;
+    animation-delay: 2s; */
+}
+/* .div{
+    content: auto;
+    column-count: auto;
+} */
+
+.row{
+    display:flex;
+    width:100%;
+    float: left;
+    justify-content: space-evenly;
+    text-decoration: none;
 } 
-.list li {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-}
-li.first-bullet{
-    color:gold;
-}
-li.second-bullet{
-    color:silver;
-}
-li.third-bullet{
-    color:brown;
-}
+/* @keyframes mymove{
+    from{left: 0px;}
+    to{left: 200px;}
+} */
